--- a/div.html
+++ b/div.html
@@ -5,10 +5,10 @@
          <link rel="stylesheet" href="styles.css" type="text/css"/>
     </head>
     <body>
+        <div id="why"></p>
         <div class="me">Text</h1>
         <div id="u">More Text</h2>
         <div class="it">Even more text</h3>
-        <div id="why">Other text</p>
     </body>
 </html>
         
